update registration to add profile
